--- a/package.json
+++ b/package.json
@@ -1,18 +1,21 @@
 {
-  "name": "project",
+  "name": "indian-crafts-ecommerce",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/dom": "^10.4.1",
-    "@testing-library/jest-dom": "^6.8.0",
-    "@testing-library/react": "^16.3.0",
-    "@testing-library/user-event": "^13.5.0",
-    "lucide-react": "^0.540.0",
-    "react": "^19.1.1",
-    "react-dom": "^19.1.1",
-    "react-router-dom": "^7.8.1",
+    "@heroicons/react": "^2.2.0",
+    "axios": "^1.11.0",
+    "clsx": "^2.1.1",
+    "glob": "^9.3.5",
+    "lucide-react": "^0.263.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.8.0",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "rimraf": "^6.0.1",
+    "rollup-plugin-terser": "^7.0.2",
+    "tailwind-merge": "^1.14.0",
+    "web-vitals": "^5.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -39,8 +42,8 @@
     ]
   },
   "devDependencies": {
-    "autoprefixer": "^10.4.21",
-    "postcss": "^8.5.6",
+    "autoprefixer": "^10.4.14",
+    "postcss": "^8.4.24",
     "tailwindcss": "^3.4.17"
   }
 }
